# paper-research

./: .gitignore  README.md  SKILL.md  pyproject.toml
.paper_research_cache/: a39f689373eb0a75.json
paper_research/: __init__.py  __main__.py  arxiv_client.py  cache.py  cli.py  hf_papers_client.py  models.py  openalex_client.py  search.py  semantic_scholar.py
paper_research.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
references/: api-notes.md
scripts/: download.py  gpu_batch_extract.sh  search.py  test_hf.py
