[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-research"
version = "0.1.0"
description = "Standalone academic paper search: arXiv, OpenAlex, Semantic Scholar"
requires-python = ">=3.10"
dependencies = ["arxiv>=2.1"]

[project.scripts]
paper-research = "paper_research.cli:main"
